k8s/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-aws
  labels:
    name: webapp-aws
    cloud-provider: aws
    enviroment: production
