k8s/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp-aws
  labels:
    app: webapp
    cloud-provider: aws
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: webapp
